[gd_scene load_steps=32 format=2]

[ext_resource path="res://cpu.gd" type="Script" id=1]
[ext_resource path="res://paddle.gd" type="Script" id=2]
[ext_resource path="res://ball.gd" type="Script" id=3]
[ext_resource path="res://player1_score.gd" type="Script" id=4]
[ext_resource path="res://player2_score.gd" type="Script" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 5, 5 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 2, 10, 10 )

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
albedo_color = Color( 0.262745, 0.607843, 0.913725, 0.501961 )

[sub_resource type="CubeMesh" id=4]
size = Vector3( 0.2, 0.2, 150 )

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true
albedo_color = Color( 0.501961, 0.364706, 0.635294, 1 )

[sub_resource type="CubeMesh" id=6]
size = Vector3( 0.2, 100, 0.2 )

[sub_resource type="Animation" id=7]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:material/0:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 0.952941, 0.545098, 0.14902, 1 ), Color( 0.262745, 0.607843, 0.913725, 0.501961 ) ]
}

[sub_resource type="BoxShape" id=8]
extents = Vector3( 1, 3, 3 )

[sub_resource type="CubeMesh" id=9]
size = Vector3( 2, 6, 6 )

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 0.329412, 0.913725, 0.262745, 1 )

[sub_resource type="SphereShape" id=11]

[sub_resource type="SphereMesh" id=12]

[sub_resource type="SpatialMaterial" id=13]
albedo_color = Color( 0.835294, 0.247059, 0.247059, 1 )

[sub_resource type="SpatialMaterial" id=14]
flags_unshaded = true
albedo_color = Color( 0.980392, 0.984314, 0.584314, 1 )

[sub_resource type="BoxShape" id=15]
extents = Vector3( 1, 26, 27 )

[sub_resource type="CubeMesh" id=16]
size = Vector3( 100, 52, 2 )

[sub_resource type="SpatialMaterial" id=17]
albedo_color = Color( 0.407843, 0.407843, 0.407843, 1 )

[sub_resource type="ConcavePolygonShape" id=18]
data = PoolVector3Array( -50, 26, 1, 50, 26, 1, -50, -26, 1, 50, 26, 1, 50, -26, 1, -50, -26, 1, 50, 26, -1, -50, 26, -1, 50, -26, -1, -50, 26, -1, -50, -26, -1, 50, -26, -1, 50, 26, 1, 50, 26, -1, 50, -26, 1, 50, 26, -1, 50, -26, -1, 50, -26, 1, -50, 26, -1, -50, 26, 1, -50, -26, -1, -50, 26, 1, -50, -26, 1, -50, -26, -1, 50, 26, 1, -50, 26, 1, 50, 26, -1, -50, 26, 1, -50, 26, -1, 50, 26, -1, -50, -26, 1, 50, -26, 1, -50, -26, -1, 50, -26, 1, 50, -26, -1, -50, -26, -1 )

[sub_resource type="ConcavePolygonShape" id=19]
data = PoolVector3Array( -50, 26, 1, 50, 26, 1, -50, -26, 1, 50, 26, 1, 50, -26, 1, -50, -26, 1, 50, 26, -1, -50, 26, -1, 50, -26, -1, -50, 26, -1, -50, -26, -1, 50, -26, -1, 50, 26, 1, 50, 26, -1, 50, -26, 1, 50, 26, -1, 50, -26, -1, 50, -26, 1, -50, 26, -1, -50, 26, 1, -50, -26, -1, -50, 26, 1, -50, -26, 1, -50, -26, -1, 50, 26, 1, -50, 26, 1, 50, 26, -1, -50, 26, 1, -50, 26, -1, 50, 26, -1, -50, -26, 1, 50, -26, 1, -50, -26, -1, 50, -26, 1, 50, -26, -1, -50, -26, -1 )

[sub_resource type="CubeMesh" id=20]
size = Vector3( 100, 2, 50 )

[sub_resource type="ConcavePolygonShape" id=21]
data = PoolVector3Array( -50, 1, 25, 50, 1, 25, -50, -1, 25, 50, 1, 25, 50, -1, 25, -50, -1, 25, 50, 1, -25, -50, 1, -25, 50, -1, -25, -50, 1, -25, -50, -1, -25, 50, -1, -25, 50, 1, 25, 50, 1, -25, 50, -1, 25, 50, 1, -25, 50, -1, -25, 50, -1, 25, -50, 1, -25, -50, 1, 25, -50, -1, -25, -50, 1, 25, -50, -1, 25, -50, -1, -25, 50, 1, 25, -50, 1, 25, 50, 1, -25, -50, 1, 25, -50, 1, -25, 50, 1, -25, -50, -1, 25, 50, -1, 25, -50, -1, -25, 50, -1, 25, 50, -1, -25, -50, -1, -25 )

[sub_resource type="ConcavePolygonShape" id=22]
data = PoolVector3Array( -50, 1, 25, 50, 1, 25, -50, -1, 25, 50, 1, 25, 50, -1, 25, -50, -1, 25, 50, 1, -25, -50, 1, -25, 50, -1, -25, -50, 1, -25, -50, -1, -25, 50, -1, -25, 50, 1, 25, 50, 1, -25, 50, -1, 25, 50, 1, -25, 50, -1, -25, 50, -1, 25, -50, 1, -25, -50, 1, 25, -50, -1, -25, -50, 1, 25, -50, -1, 25, -50, -1, -25, 50, 1, 25, -50, 1, 25, 50, 1, -25, -50, 1, 25, -50, 1, -25, 50, 1, -25, -50, -1, 25, 50, -1, 25, -50, -1, -25, 50, -1, 25, 50, -1, -25, -50, -1, -25 )

[sub_resource type="CubeMesh" id=23]
size = Vector3( 2, 100, 50 )

[sub_resource type="CubeMesh" id=24]
size = Vector3( 2, 24, 54 )

[sub_resource type="DynamicFontData" id=25]
font_path = "res://CodaCaption-ExtraBold.ttf"

[sub_resource type="DynamicFont" id=26]
size = 20
font_data = SubResource( 25 )

[node name="World" type="Spatial"]

[node name="Paddle" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0 )
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Paddle"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Paddle"]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="PositionPoles" type="Spatial" parent="Paddle"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0 )

[node name="Pole1" type="MeshInstance" parent="Paddle/PositionPoles"]
cast_shadow = 0
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="Pole2" type="MeshInstance" parent="Paddle/PositionPoles"]
cast_shadow = 0
mesh = SubResource( 6 )
material/0 = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Paddle"]
anims/hit = SubResource( 7 )

[node name="CPU" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 99, 0, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="CPU"]
shape = SubResource( 8 )

[node name="MeshInstance" type="MeshInstance" parent="CPU"]
mesh = SubResource( 9 )
material/0 = SubResource( 10 )

[node name="Ball" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 50, 0, 0 )
script = ExtResource( 3 )
velocity = Vector3( -50, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Ball"]
shape = SubResource( 11 )

[node name="MeshInstance" type="MeshInstance" parent="Ball"]
mesh = SubResource( 12 )
material/0 = SubResource( 13 )

[node name="PositionPoles" type="Spatial" parent="Ball"]

[node name="Pole1" type="MeshInstance" parent="Ball/PositionPoles"]
cast_shadow = 0
mesh = SubResource( 4 )
material/0 = SubResource( 14 )

[node name="Pole2" type="MeshInstance" parent="Ball/PositionPoles"]
cast_shadow = 0
mesh = SubResource( 6 )
material/0 = SubResource( 14 )

[node name="Goal1" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.25, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Goal1"]
shape = SubResource( 15 )

[node name="Goal2" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 101.25, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Goal2"]
shape = SubResource( 15 )

[node name="Bounds" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Bounds"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 50, 0, -26 )
mesh = SubResource( 16 )
material/0 = SubResource( 17 )

[node name="StaticBody" type="StaticBody" parent="Bounds/MeshInstance"]

[node name="CollisionShape" type="CollisionShape" parent="Bounds/MeshInstance/StaticBody"]
shape = SubResource( 18 )

[node name="MeshInstance2" type="MeshInstance" parent="Bounds"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 50, 0, 26 )
mesh = SubResource( 16 )
material/0 = SubResource( 17 )

[node name="StaticBody" type="StaticBody" parent="Bounds/MeshInstance2"]

[node name="CollisionShape" type="CollisionShape" parent="Bounds/MeshInstance2/StaticBody"]
shape = SubResource( 19 )

[node name="MeshInstance3" type="MeshInstance" parent="Bounds"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 50, -25, 0 )
mesh = SubResource( 20 )
material/0 = SubResource( 17 )

[node name="StaticBody" type="StaticBody" parent="Bounds/MeshInstance3"]

[node name="CollisionShape" type="CollisionShape" parent="Bounds/MeshInstance3/StaticBody"]
shape = SubResource( 21 )

[node name="MeshInstance4" type="MeshInstance" parent="Bounds"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 50, 25, 0 )
mesh = SubResource( 20 )
material/0 = SubResource( 17 )

[node name="StaticBody" type="StaticBody" parent="Bounds/MeshInstance4"]

[node name="CollisionShape" type="CollisionShape" parent="Bounds/MeshInstance4/StaticBody"]
shape = SubResource( 22 )

[node name="Wall" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Wall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -52 )
cast_shadow = 0
mesh = SubResource( 23 )
material/0 = SubResource( 17 )

[node name="MeshInstance2" type="MeshInstance" parent="Wall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 52 )
cast_shadow = 0
mesh = SubResource( 23 )
material/0 = SubResource( 17 )

[node name="MeshInstance3" type="MeshInstance" parent="Wall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 38, 0 )
cast_shadow = 0
mesh = SubResource( 24 )
material/0 = SubResource( 17 )

[node name="MeshInstance4" type="MeshInstance" parent="Wall"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -38, 0 )
cast_shadow = 0
mesh = SubResource( 24 )
material/0 = SubResource( 17 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -40, 0, 0 )
current = true
far = 531.9

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.990795, -0.0147044, -0.134569, 0.13537, 0.107624, 0.984933, 0, -0.994083, 0.108624, -20, 10, 0 )
shadow_enabled = true
directional_shadow_max_distance = 200.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="You" type="Label" parent="CanvasLayer/Control"]
anchor_left = 0.02
anchor_top = 0.5
anchor_right = 0.02
anchor_bottom = 0.5
margin_left = 39.52
margin_top = -15.5
margin_right = 79.52
margin_bottom = 15.5
custom_fonts/font = SubResource( 26 )
text = "You
%s"
align = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPU" type="Label" parent="CanvasLayer/Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -15.5
margin_right = -60.0
margin_bottom = 15.5
custom_fonts/font = SubResource( 26 )
text = "CPU
%s"
align = 1
script = ExtResource( 5 )

[connection signal="aim_ball" from="Paddle" to="Ball" method="_on_aim_ball"]
[connection signal="hit" from="Ball" to="Paddle" method="_on_ball_hit"]
[connection signal="body_entered" from="Goal1" to="Ball" method="_on_Goal1_body_entered"]
[connection signal="body_entered" from="Goal1" to="CanvasLayer/Control/CPU" method="_on_Goal1_body_entered"]
[connection signal="body_entered" from="Goal2" to="Ball" method="_on_Goal2_body_entered"]
[connection signal="body_entered" from="Goal2" to="CanvasLayer/Control/You" method="_on_Goal2_body_entered"]
